src/test/ui/feature-gates/feature-gate-used.rs
#[used]
fn foo() {}
//~^^ ERROR the `#[used]` attribute is an experimental feature

fn main() {}
